--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body {
     font-family: 'Space Mono', monospace;
-    height: 100vh;
+    height: max-content;
     width: 100vw;
 }
 .container {
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8rem;
+    padding: 3rem;
 }
 .scarecrow {
     width: 50%;
@@ -35,7 +35,7 @@ body {
 .content-text {
     color: #4F4F4F;
     font-size: 1rem;
-    width: 50%;
+    width: 60%;
 }
 .content-btn {
     font-family: 'Space Mono', monospace;
@@ -49,4 +49,68 @@ body {
 }
 .content-btn:hover {
     opacity: 0.7;
+}
+@media (max-width: 978px) {
+    .container {
+        height: 100%;
+        padding: 1rem;
+        gap: 3rem;
+    }
+    .scarecrow {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .scarecrow img {
+        width: 90%;
+    }
+    .content {
+        width: 100%;
+    }
+    .content-title {
+        width: 90%;
+    }
+    .content-text {
+        width: 70%;
+    }
+}
+@media (max-width: 864px) {
+    .content-title {
+        font-size: 2.5rem;
+        width: 100%;
+    }
+    .content-text {
+        width: 80%;
+    }
+}
+@media (max-width: 698px) {
+    .container {
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        padding: 1.5rem;
+        gap: 3rem;
+    }
+    .scarecrow {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .scarecrow img {
+        width: 70%;
+    }
+    .content {
+        width: 100%;
+    }
+    .content-title {
+        width: 100%;
+    }
+    .content-text {
+        width: 60%;
+    }
+}
+@media (max-width: 426px) {
+    .content-text {
+        width: 80%;
+    }
 }
